--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,22 +1,38 @@
 @import "tailwindcss";
 
+.active-scroll-spy {
+    @apply text-danger font-semibold ;
+    text-shadow: 0 0 12px theme('colors.danger.DEFAULT');
+  }
+
+@media (prefers-color-scheme: dark) {
+    .active-scroll-spy {
+      box-shadow: 0 0 15px var(--heroui-colors-primary);
+    }
+  }
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 60px;
+}
+
+
+
 @keyframes gradient-move {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .animate-gradient {
-    background-size: 200% 200%;
-    animation: gradient-move 5s ease infinite;
+  background-size: 200% 200%;
+  animation: gradient-move 5s ease infinite;
 }
 
-@config "../../tailwind.config.js"
-
-
+@config "../../tailwind.config.js";
