--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,12 @@ html {
   scroll-padding-top: 60px;
 }
 
-
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE/Edge */
+  scrollbar-width: none;     /* Firefox */
+}
 
 @config "../../tailwind.config.js";
